@@ -1,5 +1,7 @@
 * Expansion state of collapsible plug grouping is now remembered for the duration of a session (#87).
 
+* Current tab in Node Editor is now remembered for the duration of a session (#87).
+
 0.59.0
 ======
 
